# nanokiosk

./: CMakeLists.txt  README.md
assets/: lcars.acorn
src/: BluetoothListener.h  BluetoothServer.cpp  BluetoothServer.h  ConsoleListener.cpp  ConsoleListener.hpp  MainWindow.cpp  MainWindow.h  SerialServer.cpp  SerialServer.h  SocketServer.cpp  SocketServer.h  asset.qrc  main.cpp  qml.qrc
src/renderables/: blue.qml  main.qml  my_rectangle.qml  red.qml  test.qml
src/ui/: main.qml
